--- a/app/src/main/res/layout/package_details_single_layout.xml
+++ b/app/src/main/res/layout/package_details_single_layout.xml
@@ -33,6 +33,7 @@
 
 
         <TextView
+            android:id="@+id/viewPhotoBtn"
             android:layout_width="41dp"
             android:layout_height="12dp"
             android:background="@drawable/view_package_background"
@@ -105,8 +106,73 @@
             android:textSize="14sp"
             android:textFontWeight="600"
             app:cornerRadius="5dp"
+            android:padding="4dp"
+            android:letterSpacing="0"
             android:visibility="gone"
             android:drawableRight="@drawable/return_arrow"/>
+
+        <com.google.android.material.button.MaterialButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Exchange Item(s)"
+            android:textColor="@color/white"
+            android:textAllCaps="false"
+            android:backgroundTint="#2D8DFF"
+            android:textSize="14sp"
+            android:textFontWeight="600"
+            app:cornerRadius="5dp"
+            android:padding="4dp"
+            android:letterSpacing="0"
+            android:visibility="gone"
+            android:drawableRight="@drawable/return_arrow"/>
+
+        <com.google.android.material.button.MaterialButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Discard Item(s)"
+            android:textColor="@color/white"
+            android:textAllCaps="false"
+            android:backgroundTint="#2D8DFF"
+            android:textSize="14sp"
+            android:textFontWeight="600"
+            app:cornerRadius="5dp"
+            android:padding="4dp"
+            android:letterSpacing="0"
+            android:visibility="gone"
+            android:drawableRight="@drawable/return_arrow"/>
+
+        <com.google.android.material.button.MaterialButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Split Package"
+            android:textColor="@color/white"
+            android:textAllCaps="false"
+            android:backgroundTint="#2D8DFF"
+            android:textSize="14sp"
+            android:textFontWeight="600"
+            app:cornerRadius="5dp"
+            android:padding="4dp"
+            android:letterSpacing="0"
+            android:visibility="gone"
+            android:drawableRight="@drawable/return_arrow"/>
+
+
+        <com.google.android.material.button.MaterialButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Ship within India"
+            android:textColor="@color/white"
+            android:textAllCaps="false"
+            android:backgroundTint="#2D8DFF"
+            android:textSize="14sp"
+            android:textFontWeight="600"
+            app:cornerRadius="5dp"
+            android:padding="4dp"
+            android:letterSpacing="0"
+            android:visibility="gone"
+            android:drawableRight="@drawable/return_arrow"/>
+
+
 
 
         <TextView
