--- a/app/src/main/res/layout/fragment_view_profile.xml
+++ b/app/src/main/res/layout/fragment_view_profile.xml
@@ -38,9 +38,8 @@
                         android:layout_width="112dp"
                         android:layout_height="112dp"
                         android:layout_gravity="center_vertical"
-                        android:src="@drawable/profile_pic"
-                        android:layout_marginLeft="29dp"/>
-
+                        android:layout_marginLeft="16dp"
+                        android:src="@drawable/profile_pic" />
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -64,11 +63,12 @@
                         <LinearLayout
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="12dp">
+                            android:layout_marginTop="12dp"
+                            android:layout_marginHorizontal="20dp">
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="Locker No.: "
+                                android:text="Locker No: "
                                 android:textColor="@color/black"
                                 android:textFontWeight="600"
                                 android:textSize="12sp"
@@ -78,6 +78,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:lineHeight="17sp"
+
                                 android:text="SA-976-6767"
                                 android:textColor="@color/black"
                                 android:textFontWeight="600"
@@ -376,7 +377,8 @@
 
 
 
-                    <EditText
+                    <TextView
+                        android:gravity="center_vertical"
                         android:id="@+id/updateProfileEmail"
                         android:layout_width="match_parent"
                         android:layout_height="30dp"
@@ -418,7 +420,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="34dp"
                         android:layout_marginTop="7dp"
-                        android:layout_marginRight="59dp">
+                        android:layout_marginRight="34dp">
 
                         <TextView
                             android:id="@+id/unverified"
