--- a/app/src/main/res/layout/fragment_order.xml
+++ b/app/src/main/res/layout/fragment_order.xml
@@ -23,6 +23,12 @@
 
                 android:orientation="vertical">
 
+                <com.google.android.exoplayer2.ui.PlayerView
+                    android:id="@+id/exoPlayerView"
+                    android:layout_width="match_parent"
+                    android:layout_height="200dp">
+
+                </com.google.android.exoplayer2.ui.PlayerView>
 
                 <androidx.cardview.widget.CardView
                     android:visibility="gone"
