--- a/app/src/main/res/layout/fragment_order.xml
+++ b/app/src/main/res/layout/fragment_order.xml
@@ -20,16 +20,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-
-
                 android:orientation="vertical">
 
-                <com.google.android.exoplayer2.ui.PlayerView
-                    android:id="@+id/exoPlayerView"
-                    android:layout_width="match_parent"
-                    android:layout_height="200dp">
-
-                </com.google.android.exoplayer2.ui.PlayerView>
 
 
                 <androidx.cardview.widget.CardView
@@ -204,11 +196,13 @@
                         android:layout_height="wrap_content"
                         android:orientation="vertical">
 
-                        <ImageView
+                        <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
+                            android:id="@+id/youtube_player_view"
                             android:layout_width="match_parent"
                             android:layout_height="243dp"
-                            android:src="@drawable/banner"
-                            android:layout_marginTop="-10dp"/>
+                            app:videoId="vb99LF4U1ew"
+                            app:autoPlay="false"
+                            app:showFullScreenButton="false" />
 
                         <TextView
                             android:layout_width="match_parent"
