--- a/app/src/main/res/layout/fragment_view_profile.xml
+++ b/app/src/main/res/layout/fragment_view_profile.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:id="@+id/main"
     tools:context=".UI.AccountAndWallet.AcountWalletFragments.ViewProfile">
 
 
@@ -35,11 +36,11 @@
 
                     <ImageView
                         android:id="@+id/profileImage"
-                        android:layout_width="112dp"
-                        android:layout_height="112dp"
+                        android:layout_width="100dp"
+                        android:layout_height="100dp"
                         android:layout_gravity="center_vertical"
                         android:src="@drawable/profile_pic"
-                        android:layout_marginLeft="29dp"/>
+                        android:layout_marginLeft="15dp"/>
 
 
                     <LinearLayout
@@ -64,11 +65,12 @@
                         <LinearLayout
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="12dp">
+                            android:layout_marginTop="12dp"
+                            android:layout_marginHorizontal="8dp">
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="Locker No.: "
+                                android:text="Locker No: "
                                 android:textColor="@color/black"
                                 android:textFontWeight="600"
                                 android:textSize="12sp"
